css/style.css
/* ... */
.social-icons a:hover {
    opacity: 0.7;
}

.social-icons span {
    display: none;
}

#header .social-icons {
    margin-top: 27px;
}

/* --------- 2.6 Images ---------- */

/*Alignment*/

img {
    vertical-align: top;
}

.image-center {
    display: block;
    margin: 0 auto;
}

a img {
    border: none;
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
    -webkit-backface-visibility: hidden;
}

a img:hover {
    opacity: 0.7;
}

/*------------------------------------------------------------------------------------------*/
/* 3. Fonts */
/*------------------------------------------------------------------------------------------*/

p  {
    font-size: 18px;
}

h1 {
    padding: 20px 0;
    font-size: 20px;
}

h2 {
    padding: 14px 0;
}

h3 {
    padding: 10px 0;
}

h4 {
    padding: 7px 0;
}

h5 {
    padding: 7px 0;
}

h6 {
    padding: 7px 0;
}

/* Text Alignment */

.text-left {
    text-align: left;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

/* Section Headings */

.section-heading {
    padding: 0 0 15px 0;
}

.section-subtitle {
    font-size: 22px;
    padding-top: 0;
}

.section-heading h3 {
    font-size: 22px;
    font-weight: bold;
    letter-spacing: 2px;
    padding-bottom: 0;
}

.section-heading h1 {
    font-size: 32px;
    color: #4266B2;
    letter-spacing: 1px;
    padding-bottom: 0;
}

/*------------------------------------------------------------------------------------------*/
/* 4. Banner */
/*------------------------------------------------------------------------------------------*/

#banner {
    background-size: cover;
}

#banner-content.row {
    padding-top: 170px;
    padding-bottom: 100px;
}

#banner h1 {
    padding-top: 5%;
}

#banner .section-heading:before {
    content: "";
    display: block;
    width: 30px;
    height: 5px;
    margin-top: 30px;
}



/*------------------------------------------------------------------------------------------*/
/* 5. Content Elements */
/*------------------------------------------------------------------------------------------*/

/* --------- 5.1 Icons ---------- */

/*Font Icon sizes*/

.fa-1x {
    font-size: 15px !important;
}

/*Icon Block*/

.icon-block {
    position: relative;
}

.icon-block h4 {
    font-weight: bold;
    padding-top: 0;
}

.icon-block .icon {
    position: absolute;
}

.icon-block p {
    margin-top: 0;
}

/* Icon Left*/

.icon-left .icon {
    left: 15;
}

.icon-left .icon-block-description {
    padding-left: 53px;
}

/* Icon Right */

.icon-right .icon {
    right: 15;
}

.icon-right .icon-block-description {
    padding-right: 53px;
}

/* Icon Above */

.icon-top {
    display: block;
}

.icon-top .icon {
    position: relative;
    display: block;
}

.icon-top .icon-block-description {
    padding-top: 25px;
}

/* --------- 5.2 Parallax Elements ---------- */

.banner-parallax-1, .banner-parallax-2, .banner-parallax-3 {
    min-height: 350px;
}

/* --------- 5.3 Divider ---------- */

.divider {
    position: relative;
    width: 40%;
    height: 20px;
    line-height: 20px;
    margin: 10px auto 5px auto;
    clear: both;
    text-align: center;
}

.divider-inner {
    position: absolute;
    height: 1px;
    width: 100%;
    top: 50%;
    margin-top: -1px;
    border-top: 1px solid;
    border-color: #e1e1e1;
}

.divider i {
    background: #fff;
    position: relative;
    top: -11px;
    padding: 0 5px 0 5px;
    color: #e1e1e1;
}

/*------------------------------------------------------------------------------------------*/
/* 6. Landing Page Sections */
/*------------------------------------------------------------------------------------------*/

/* --------- 6.1 Introduction ---------- */

.introduction img.featured {
    padding: 55px 0 0 0;
}

/* --------- 6.2 Features ---------- */

.features.row {
    padding-left: 5%;
    padding-right: 5%;
}

.features div:nth-child(4) {
    clear: both;
}

/* --------- 6.3 Testimonials ---------- */

.testimonial {
    padding: 15px;
}

blockquote {
    position: relative;
}

.testimonial img {
    max-height: 120px;
    border-radius: 250em;
}

.testimonial footer {
    padding-top: 12px;
}

/* Style Classic - Avatar above Testimonial */

.testimonial.classic img {
    display: inline-block;
    margin-bottom: 25px;
}

.testimonial.classic q {
    display: block;
}

.testimonial.classic footer:before {
    display: block;
    content: "";
    width: 30px;
    height: 4px;
    margin: 10px auto 15px auto;
}

/* Style Big */

.testimonial.bigtest {
    padding-top: 0px;
    padding-bottom: 0px;
}

.testimonial.bigtest q {
    font-size: 28px;
}

/* --------- 6.4 Gallery ---------- */

#gallery img {
    max-height: 300px;
}

#gallery [class*='col-'] {
    padding: 0;
}

#gallery a {
    display: inline-block;
    position: relative;
    overflow: hidden;
}

#gallery a:hover img {
    opacity: 0.15;
    -moz-backface-visibility: hidden;
}

#gallery a:before {
    font-size: 2.2em;
    font-style: normal;
    font-weight: normal;
    text-align: center;
    content: "+";
    width: 70px;
    height: 70px;
    border-radius: 100em;
    display: block;
    position: absolute;
    top: 55%;
    left: 50%;
    line-height: 72px;
    margin: -35px 0 0 -35px;
    opacity: 0;
    -webkit-transition: all .2s linear;
    -moz-transition: all .2s linear;
    transition: all .2s linear;
    vertical-align: middle;
}

#gallery a:hover:before {
    opacity: 1;
    top: 50%;
    left: 50%;
}
/* ... */

